--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="main-navigation">
-        <h1><a href="{%url 'home-page'%}">Mahdi's Blog </a></h1>
+        <h1><a href="{%url 'home-page'%}">Blogal </a></h1>
         <nav>
             <a href="{% url 'readlater'%}"> Read-Later </a>
             <a href="{% url 'all-posts'%}"> All Posts </a>
